--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="C:\xampp\htdocs\ako\condes/mirror.jpg" alt="">
+                    <img src="mirror.jpg" alt="">
                 </div>
             </section>
 
@@ -59,7 +59,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="C:\xampp\htdocs\ako\condes/me.jpg" alt="">
+                        <img src="me.jpg" alt="">
                     </div>
                     
                     <div>
@@ -127,7 +127,7 @@
                     </div>
                     
                     <div>              
-                        <img src="C:\xampp\htdocs\ako\condes/skills.png" alt="" class="">
+                        <img src="skills.png" alt="" class="">
                     </div>
                 </div>
             </section>
@@ -141,12 +141,12 @@
                         <img src="C:\xampp\htdocs\ako\condes/wed.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="C:\xampp\htdocs\ako\condes/Screenshot.png"  alt="">
-                        <img src="C:\xampp\htdocs\ako\condes/Screenshot.png"  alt="">
+                        <img src="Screenshot.png"  alt="">
+                        <img src="Screenshot.png"  alt="">
                     </div>
                     <div class="work__img">
-                        <img src="C:\xampp\htdocs\ako\condes/Screenshots.png" alt="">
-                        <img src="C:\xampp\htdocs\ako\condes/Screenshots.png" alt="">
+                        <img src="Screenshots.png" alt="">
+                        <img src="Screenshots.png" alt="">
                     </div>
             </section>
 
