--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Student ni Condes</a>
+                    <a href="#" class="nav__logo">Personal Portfolio</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -167,7 +167,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Student ni Condes</p>
+            <p class="footer__title">Personal Portfolio</p>
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
