--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
                 <div class="home__img">    
-                    <img src="C:\xampp\htdocs\ako\condes/sabin.jpeg" alt="">
+                    <img src="sabin.jpeg" alt="">
                 </div>
             </section>
 
@@ -51,7 +51,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="C:\xampp\htdocs\ako\condes/me.jpg" alt="">
+                        <img src="me.jpg" alt="">
                     </div>
                     
                     <div>
@@ -119,7 +119,7 @@
                     </div>
                     
                     <div>              
-                        <img src="C:\xampp\htdocs\ako\condes/skills.png" alt="" class="">
+                        <img src="skills.png" alt="" class="">
                     </div>
                 </div>
             </section>
